# JobMatch-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml
backend/: __init__.py  worker.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: graph.py  queue.py  run_manager.py
backend/app/models/: schemas.py
backend/app/storage/: artifacts.py  db.py  models.py
frontend/streamlit_app/: main.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_baseline.py
notebooks/: resume-jd-matcher-agentic-langgraph.ipynb
tests/: conftest.py  test_api_contract.py  test_graph_unit.py
