[project]
name = "jobmatch-ai"
version = "0.1.0"
description = "Resume ↔ JD matching with LangGraph, FastAPI, worker queue, and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "arq>=0.26.0",
  "redis>=5.0.7",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "orjson>=3.10.7",
  "typing-extensions>=4.12.2",
  "streamlit>=1.37.0",
  "ipykernel>=6.30.1",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "anyio>=4.11.0",
  "ruff>=0.13.3",
  "black>=25.9.0",
  "mypy>=1.18.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
  "anyio>=4.4.0",
  "ruff>=0.6.8",
  "black>=24.8.0",
  "mypy>=1.11.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
